# webify

./: .gitattributes  .gitignore  .travis.yml  LICENSE  Makefile  README.md  changelog.md  convert_test  stack.yaml  webify.cabal
.github/workflows/: ci.yml
dev/: docs.md
scripts/: woff_validate
src/: EOT.hs  Font.hs  OTF.hs  SVG.hs  TTF.hs  Utils.hs  WOFF.hs  Webify.hs
