name:                webify
version:             0.1.5.0
synopsis:            webfont generator
description:
        A command line tool to convert ttf file to woff, eot & svg files

homepage:            http://github.com/ananthakumaran/webify
license:             MIT
license-file:        LICENSE
author:              Anantha Kumaran
maintainer:          ananthakumaran@gmail.com
copyright:           (c) 2013 Anantha Kumaran
category:            Web
build-type:          Simple
cabal-version:       >=1.8

Flag debug
     Default: False

executable webify
  hs-source-dirs:   src
  main-is:             Webify.hs

  if flag(debug)
    ghc-prof-options: -prof, -fprof-auto

  -- other-modules:
  build-depends:       base ==4.6.*,
                       containers >= 0.4.2.1,
                       bytestring >= 0.9,
                       binary >= 0.5.1,
                       binary-strict >= 0.4.8,
                       text >= 0.7.2,
                       filepath >= 1.3.0,
                       zlib >= 0.5.4,
                       xmlgen == 0.4.0.3,
                       optparse-applicative >= 0.5.2,
                       vector >= 0.10.0,
                       hopfli >= 0.1.0.0

source-repository head
  type:     git
  location: https://github.com/ananthakumaran/webify.git
