name:                webify
version:             0.1.9.0
synopsis:            webfont generator
description:
        A command line tool to convert ttf file to woff, eot & svg files

homepage:            http://github.com/ananthakumaran/webify
license:             MIT
license-file:        LICENSE
author:              Anantha Kumaran
maintainer:          Sarah Brofeldt <sbrofeldt@gmail.com>
copyright:           (c) 2013 Anantha Kumaran
category:            Web
build-type:          Simple
tested-with:         GHC == 7.10.2, GHC == 8.0.2, GHC == 8.2.2
cabal-version:       >=1.8

Flag debug
     Default: False

executable webify
  hs-source-dirs:   src
  main-is:             Webify.hs
  other-modules:       EOT, Font, OTF, SVG, TTF, Utils, WOFF

  if flag(debug)
    ghc-prof-options: -prof, -fprof-auto

  build-depends:       base >=4.8 && <5,
                       containers >= 0.4.2.1,
                       bytestring >= 0.9,
                       blaze-builder >= 0.3.3.4,
                       binary >= 0.5.1,
                       binary-strict >= 0.4.8.2,
                       text >= 0.7.2,
                       filepath >= 1.3.0,
                       zlib >= 0.5.4,
                       xmlgen >= 0.6.2.1,
                       optparse-applicative >= 0.10.0 && <0.15,
                       vector >= 0.10.0,
                       hopfli >= 0.1.0.0 && < 0.3

source-repository head
  type:     git
  location: https://github.com/ananthakumaran/webify.git
